--- a/systests/webapps/pom.xml
+++ b/systests/webapps/pom.xml
@@ -22,7 +22,7 @@
    <parent>
        <groupId>org.apache.cxf.fediz</groupId>
        <artifactId>fediz-systests</artifactId>
-       <version>1.2.0</version>
+       <version>1.2.0-SNAPSHOT</version>
    </parent>
    <groupId>org.apache.cxf.fediz.systests</groupId>
    <artifactId>fediz-systests-webapps</artifactId>
