--- a/pom.xml
+++ b/pom.xml
@@ -39,10 +39,10 @@
         <apacheds.version>2.0.0-M19</apacheds.version>
         <commons.lang.version>3.3.2</commons.lang.version>
         <commons.logging.version>1.1.3</commons.logging.version>
-        <cxf.version>3.0.4</cxf.version>
-        <cxf.build-utils.version>3.0.0</cxf.build-utils.version>
+        <cxf.version>3.1.0</cxf.version>
+        <cxf.build-utils.version>3.1.0</cxf.build-utils.version>
         <easymock.version>3.3</easymock.version>
-        <ehcache.version>2.8.5</ehcache.version>
+        <ehcache.version>2.9.0</ehcache.version>
         <httpclient.version>4.3.5</httpclient.version>
         <hsqldb.version>1.8.0.10</hsqldb.version>
         <htmlunit.version>2.15</htmlunit.version>
@@ -60,7 +60,7 @@
         <spring.version>3.2.6.RELEASE</spring.version>
         <spring.security.version>3.1.4.RELEASE</spring.security.version>
         <tomcat.version>7.0.54</tomcat.version>
-        <wss4j.version>2.0.3</wss4j.version>
+        <wss4j.version>2.1.0</wss4j.version>
         <xalan.version>2.7.2</xalan.version>
         <bval.version>0.5</bval.version>
 
@@ -454,12 +454,17 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-checkstyle-plugin</artifactId>
-                    <version>2.12.1</version>
+                    <version>2.15</version>
                     <dependencies>
                         <dependency>
                             <groupId>org.apache.cxf.build-utils</groupId>
                             <artifactId>cxf-buildtools</artifactId>
                             <version>${cxf.build-utils.version}</version>
+                        </dependency>
+                        <dependency>
+                            <groupId>com.puppycrawl.tools</groupId>
+                            <artifactId>checkstyle</artifactId>
+                            <version>6.4.1</version>
                         </dependency>
                     </dependencies>
                     <configuration>
