--- a/pom.xml
+++ b/pom.xml
@@ -36,12 +36,13 @@
     </prerequisites>
 
     <properties>
-        <apacheds.version>2.0.0-M19</apacheds.version>
-        <commons.lang.version>3.3.2</commons.lang.version>
-        <commons.logging.version>1.1.3</commons.logging.version>
+        <apacheds.version>2.0.0-M20</apacheds.version>
+        <commons.lang.version>3.4</commons.lang.version>
+        <commons.logging.version>1.2</commons.logging.version>
         <cxf.version>3.1.0</cxf.version>
         <cxf.build-utils.version>3.1.0</cxf.build-utils.version>
         <easymock.version>3.3</easymock.version>
+        <ecj.version>3.7.1</ecj.version>
         <ehcache.version>2.9.0</ehcache.version>
         <hibernate.version>5.1.1.Final</hibernate.version>
         <httpclient.version>4.3.5</httpclient.version>
@@ -57,7 +58,7 @@
         <ognl.version>3.0.8</ognl.version>
         <openjpa.version>2.3.0</openjpa.version>
         <servlet.version>2.5</servlet.version>
-        <slf4j.version>1.7.9</slf4j.version>
+        <slf4j.version>1.7.12</slf4j.version>
         <spring.version>4.1.6.RELEASE</spring.version>
         <spring.security.version>3.1.4.RELEASE</spring.security.version>
         <tomcat.version>7.0.54</tomcat.version>
