Some work on supporting metadata for services in the IdP

--- a/services/idp/src/main/webapp/WEB-INF/web.xml
+++ b/services/idp/src/main/webapp/WEB-INF/web.xml
@@ -90,6 +90,7 @@ under the License.
 	<servlet-mapping>
 		<servlet-name>metadata</servlet-name>
 		<url-pattern>/FederationMetadata/2007-06/FederationMetadata.xml</url-pattern>
+		<url-pattern>/metadata/*</url-pattern>
 	</servlet-mapping>
 
 	<servlet>
