Fixing failsafe log4j error messages

--- a/services/idp/pom.xml
+++ b/services/idp/pom.xml
@@ -435,6 +435,7 @@
                             <skip>false</skip>
                             <systemPropertyVariables>
                                 <idp.https.port>${idp.https.port}</idp.https.port>
+                                <catalina.base>target</catalina.base>
                             </systemPropertyVariables>
                             <includes>
                                 <include>**/integrationtests/**</include>
