--- a/services/idp/pom.xml
+++ b/services/idp/pom.xml
@@ -179,7 +179,7 @@
             <version>1.9.13</version>
         </dependency>
         <dependency>
-            <groupId>hsqldb</groupId>
+            <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <version>${hsqldb.version}</version>
             <scope>provided</scope>
@@ -415,9 +415,9 @@
                 </executions>
                 <dependencies>
                     <dependency>
-                        <groupId>hsqldb</groupId>
+                        <groupId>org.hsqldb</groupId>
                         <artifactId>hsqldb</artifactId>
-                        <version>1.8.0.7</version>
+                        <version>${hsqldb.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
