--- a/systests/webapps/springPreauthWebapp/pom.xml
+++ b/systests/webapps/springPreauthWebapp/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz.systests</groupId>
         <artifactId>fediz-systests-webapps</artifactId>
-        <version>1.2.1-SNAPSHOT</version>
+        <version>1.2.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <groupId>org.apache.cxf.fediz.systests.webapps</groupId>
