--- a/examples/wsclientWebapp/webapp/pom.xml
+++ b/examples/wsclientWebapp/webapp/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.cxf.fediz.examples</groupId>
         <artifactId>wsclientWebapp</artifactId>
-        <version>1.1.3-SNAPSHOT</version>
+        <version>1.1.3</version>
     </parent>
     <groupId>org.apache.cxf.fediz.examples.wsclientWebapp</groupId>
     <artifactId>webapp</artifactId>
