--- a/systests/pom.xml
+++ b/systests/pom.xml
@@ -22,7 +22,7 @@
    <parent>
        <groupId>org.apache.cxf.fediz</groupId>
        <artifactId>fediz</artifactId>
-       <version>1.1.4-SNAPSHOT</version>
+       <version>1.1.3</version>
    </parent>
    <groupId>org.apache.cxf.fediz</groupId>
    <artifactId>systests</artifactId>
