Updated Websphere sample application to fit the system test requirementd. Added deployment project to build ear file for websphere deployment.

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -37,4 +37,14 @@
         <module>spring2Webapp</module>
         <module>springPreauthWebapp</module>
     </modules>
+	
+	<profiles>
+     <profile>
+       <id>websphere</id>
+       <modules>
+			<module>websphereWebapp</module>
+			<module>websphereWebappEar</module>
+       </modules>
+     </profile>
+   </profiles>
 </project>
