Fixed logout process. Websphere session cookie is now deleted. Servlet API 3.x is required by Websphere 8.5 to support a logout.

--- a/plugins/websphere/pom.xml
+++ b/plugins/websphere/pom.xml
@@ -36,10 +36,11 @@
     <dependencies>
         <dependency>
             <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>${servlet.version}</version>
-            <type>jar</type>
-            <scope>compile</scope>
+            <artifactId>javax.servlet-api</artifactId>
+            <!--<version>${servlet.version}</version>-->
+			<version>3.1.0</version>
+            <!--<type>jar</type>-->
+            <!--<scope>compile</scope>-->
         </dependency>
         <dependency>
             <groupId>org.apache.cxf.fediz</groupId>
