Added Websphere systests.
At the moment there is a standalone Websphere required to run the tests. The tests will only be executed if profile websphere is requested.

--- a/systests/pom.xml
+++ b/systests/pom.xml
@@ -39,5 +39,14 @@
       <module>federation</module>
       <module>kerberos</module>
    </modules>
+   
+   <profiles>
+     <profile>
+       <id>websphere</id>
+       <modules>
+         <module>websphere</module>
+       </modules>
+     </profile>
+   </profiles>
 
 </project>
