--- a/plugins/core/pom.xml
+++ b/plugins/core/pom.xml
@@ -30,6 +30,7 @@
     <packaging>bundle</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <cxf.xjc-utils.version>3.0.5-SNAPSHOT</cxf.xjc-utils.version>
     </properties>
     <dependencies>
         <dependency>
@@ -77,30 +78,29 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>com.sun.tools.xjc.maven2</groupId>
-                <artifactId>maven-jaxb-plugin</artifactId>
-                <version>1.1.1</version>
+                <groupId>org.apache.cxf</groupId>
+                <artifactId>cxf-xjc-plugin</artifactId>
+                <version>${cxf.xjc-utils.version}</version>
                 <executions>
                     <execution>
                         <goals>
-                            <goal>generate</goal>
+                            <goal>xsdtojava</goal>
                         </goals>
                     </execution>
                 </executions>
                 <configuration>
-                    <schemaDirectory>${basedir}/src/main/resources</schemaDirectory>
-                    <generatePackage>org.apache.cxf.fediz.core.config.jaxb</generatePackage>
-                    <includeSchemas>
-                        <includeSchema>**/FedizConfig.xsd</includeSchema>
-                    </includeSchemas>
-                    <excludeSchemas>
-                        <excludeSchema>test*.xsd</excludeSchema>
-                    </excludeSchemas>
-                    <includeBindings>
-                        <includeBinding>*.xjb</includeBinding>
-                    </includeBindings>
-                    <strict>true</strict>
-                    <verbose>true</verbose>
+                    <xsdOptions>
+                        <xsdOption>
+                            <xsd>${basedir}/src/main/resources/schemas/FedizConfig.xsd</xsd>
+                            <packagename>org.apache.cxf.fediz.core.config.jaxb</packagename>
+                            <extensionArgs>
+                                <arg>-Xdv</arg>
+                            </extensionArgs>
+                        </xsdOption>
+                    </xsdOptions>
+                    <extensions>
+                        <extension>org.apache.cxf.xjcplugins:cxf-xjc-dv:${cxf.xjc-utils.version}</extension>
+                    </extensions>
                 </configuration>
             </plugin>
             <plugin>
