--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -32,7 +32,7 @@
    <modules>
       <module>core</module>
       <module>tomcat7</module>
-      <module>jetty</module>
+      <module>jetty8</module>
       <module>spring</module>
       <module>spring2</module>
       <module>cxf</module>
