--- a/services/idp/pom.xml
+++ b/services/idp/pom.xml
@@ -364,7 +364,7 @@
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-                <version>${jetty.version}</version>
+                <version>${jetty8.version}</version>
                 <configuration>
                     <stopPort>${idp.stop.port}</stopPort>
                     <stopKey>STOP</stopKey>
