--- a/services/sts/pom.xml
+++ b/services/sts/pom.xml
@@ -185,7 +185,7 @@
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-                <version>${jetty.version}</version>
+                <version>${jetty8.version}</version>
                 <inherited>true</inherited>
                 <configuration>
                     <webApp>
