--- a/systests/jetty8/pom.xml
+++ b/systests/jetty8/pom.xml
@@ -70,7 +70,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.cxf.fediz</groupId>
-            <artifactId>fediz-jetty</artifactId>
+            <artifactId>fediz-jetty8</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
