--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
         <slf4j.version>1.7.12</slf4j.version>
         <spring.version>4.1.6.RELEASE</spring.version>
         <spring.security.version>3.1.4.RELEASE</spring.security.version>
-        <tomcat.version>7.0.54</tomcat.version>
+        <tomcat7.version>7.0.54</tomcat7.version>
         <wss4j.version>2.1.2</wss4j.version>
         <xalan.version>2.7.2</xalan.version>
 
