[FEDIZ-124] - Fediz-plugin for Tomcat 8

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -32,6 +32,7 @@
    <modules>
       <module>core</module>
       <module>tomcat7</module>
+      <module>tomcat8</module>
       <module>jetty8</module>
       <module>spring</module>
       <module>spring2</module>
