--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
         <spring.version>4.1.6.RELEASE</spring.version>
         <spring.security.version>3.1.4.RELEASE</spring.security.version>
         <tomcat7.version>7.0.54</tomcat7.version>
+        <tomcat8.version>8.0.26</tomcat8.version>
         <wss4j.version>2.1.2</wss4j.version>
         <xalan.version>2.7.2</xalan.version>
 
