--- a/examples/wsclientWebapp/webapp/pom.xml
+++ b/examples/wsclientWebapp/webapp/pom.xml
@@ -51,7 +51,7 @@
             <version>${tomcat7.version}</version>
             <scope>provided</scope>
         </dependency>
-        <!-- Required to cast Principal to FederationPrincipal -->
+        <!-- Required to cast Principal to FedizPrincipal -->
         <dependency>
             <groupId>org.apache.cxf.fediz</groupId>
             <artifactId>fediz-core</artifactId>
