--- a/plugins/jetty9/pom.xml
+++ b/plugins/jetty9/pom.xml
@@ -25,8 +25,8 @@
         <version>1.3.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <artifactId>fediz-jetty8</artifactId>
-    <name>Apache Fediz Plugin for Jetty 8</name>
+    <artifactId>fediz-jetty9</artifactId>
+    <name>Apache Fediz Plugin for Jetty 9</name>
     <packaging>bundle</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -35,20 +35,26 @@
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-server</artifactId>
-            <version>${jetty8.version}</version>
+            <version>${jetty9.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-security</artifactId>
-            <version>${jetty8.version}</version>
+            <version>${jetty9.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-util</artifactId>
-            <version>${jetty8.version}</version>
+            <version>${jetty9.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.cxf.fediz</groupId>
